--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,11 @@
 	"license": "MIT",
 	"type": "project",
 	"require": {
-		"laravel/framework": "5.0.*"
+		"laravel/framework": "5.0.*",
+		"laravelcollective/html": "~5.0",
+		"davejamesmiller/laravel-breadcrumbs": "^3.0",
+		"laracasts/flash": "~1.3",
+		"kartik-v/bootstrap-star-rating": "@dev"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
