--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
 		"laravelcollective/html": "~5.0",
 		"davejamesmiller/laravel-breadcrumbs": "^3.0",
 		"laracasts/flash": "~1.3",
-		"kartik-v/bootstrap-star-rating": "@dev"
+		"kartik-v/bootstrap-star-rating": "@dev",
+		"doctrine/dbal": "2.5.1"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
