--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
 		"laracasts/flash": "~1.3",
 		"kartik-v/bootstrap-star-rating": "@dev",
 		"doctrine/dbal": "2.5.1",
-		"guzzlehttp/guzzle": "~5.3|~6.0"
+		"guzzlehttp/guzzle": "~5.3|~6.0",
+		"barryvdh/laravel-debugbar": "^2.0"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
