--- a/composer.json
+++ b/composer.json
@@ -12,12 +12,11 @@
 		"kartik-v/bootstrap-star-rating": "@dev",
 		"doctrine/dbal": "2.5.1",
 		"guzzlehttp/guzzle": "~5.3|~6.0",
-		"barryvdh/laravel-debugbar": "^2.0"
+		"zizaco/entrust": "1.4.1"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
-		"phpspec/phpspec": "~2.1",
-		"zizaco/entrust": "dev-laravel-5"
+		"phpspec/phpspec": "~2.1"
 	},
 	"autoload": {
 		"classmap": [
