--- a/circle.yml
+++ b/circle.yml
@@ -1,3 +1,13 @@
 machine:
   php:
     version: 5.6.5
+
+  environment:
+    APP_ENV: production
+    DB_HOST: 127.0.0.1
+    DB_DATABASE: digfilm
+    DB_USERNAME: root
+
+dependencies:
+  override:
+    - composer install --prefer-source --no-interaction
